--- a/src/components/combobox/base.css
+++ b/src/components/combobox/base.css
@@ -43,8 +43,7 @@
         background-color: var(--color-base-soft);
     }
 
-    &[aria-selected="true"],
-    &.combobox-item-active {
+    &:is([aria-selected="true"], .combobox-item-active) {
         background-color: var(--combobox-item-active-bg);
         color: var(--combobox-item-active-color);
     }
