--- a/src/components/drawer/base.css
+++ b/src/components/drawer/base.css
@@ -30,8 +30,7 @@
     background-color: light-dark(color-mix(in oklch, black 10%, var(--color-base-600) 40%), color-mix(in oklch, black 10%, var(--color-base-400) 40%));
   }
 
-  &[open],
-  &.drawer-open {
+  &:is([open], .drawer-open) {
     @starting-style {
       visibility: hidden;
     }
