--- a/src/components/swap/base.css
+++ b/src/components/swap/base.css
@@ -38,8 +38,7 @@
         opacity: 1;
     }
 
-    &:has(input:checked),
-    &.swap-active {
+    &:is(:has(input:checked), .swap-active) {
         :where(.swap-on) {
             opacity: 1;
             pointer-events: auto;
