--- a/src/components/swap/styles.css
+++ b/src/components/swap/styles.css
@@ -4,8 +4,7 @@
         rotate: 45deg;
     }
 
-    &:has(input:checked),
-    &.swap-active {
+    &:is(:has(input:checked), .swap-active) {
         :where(.swap-off) {
             rotate: -45deg;
         }
@@ -31,8 +30,7 @@
         transform: rotateY(0deg);
     }
 
-    &:has(input:checked),
-    &.swap-active {
+    &:is(:has(input:checked), .swap-active) {
         :where(.swap-off) {
             transform: rotateY(-180deg);
         }
