--- a/src/components/tooltip/base.css
+++ b/src/components/tooltip/base.css
@@ -65,9 +65,7 @@
     }
 
     &:is([data-tip]:not([data-tip=""]), :has(.tooltip-content:not(:empty))) {
-      &.tooltip-open,
-      &:hover,
-      &:focus-within {
+      &:is(.tooltip-open, :hover, :focus-within) {
         & > .tooltip-content,
         &[data-tip]:before,
         &:after {
