--- a/src/utilities/para.css
+++ b/src/utilities/para.css
@@ -5,68 +5,68 @@
 }
 
 @utility para-xs {
-  @apply para;
+  @copy para;
   font-size: var(--text-xs);
 }
 
 @utility para-sm {
-  @apply para;
+  @copy para;
   font-size: var(--text-sm);
 }
 
 
 @utility para-md {
-  @apply para;
+  @copy para;
   font-size: var(--text-base);
 }
 
 @utility para-lg {
-  @apply para;
+  @copy para;
   font-size: var(--text-lg);
 }
 
 @utility para-xl {
-  @apply para;
+  @copy para;
   font-size: var(--text-xl);
 }
 
 @utility para-2xl {
-  @apply para;
+  @copy para;
   font-size: var(--text-2xl);
 }
 
 @utility para-3xl {
-  @apply para;
+  @copy para;
   font-size: var(--text-3xl);
 }
 
 @utility para-4xl {
-  @apply para;
+  @copy para;
   font-size: var(--text-4xl);
 }
 
 @utility para-5xl {
-  @apply para;
+  @copy para;
   font-size: var(--text-5xl);
 }
 
 @utility para-6xl {
-  @apply para;
+  @copy para;
   font-size: var(--text-6xl);
 }
 
 @utility para-7xl {
-  @apply para;
+  @copy para;
   font-size: var(--text-7xl);
 }
 
 @utility para-8xl {
-  @apply para;
+  @copy para;
   font-size: var(--text-8xl);
 }
 
 @utility para-9xl {
-  @apply para;
+  @copy para;
   font-size: var(--text-9xl);
 }
 
